test/conformance/chainsaw/exceptions/exclude-pod-security-in-rule/pod-allowed-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-02
  namespace: staging-ns-1
spec:
  hostNetwork: true
  securityContext:
    windowsOptions:
      hostProcess: true
  containers:
  - name: container01
    image: dummyimagename
