test/conformance/chainsaw/exceptions/exclude-pod-security-in-rule/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-2
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
