test/conformance/chainsaw/exceptions/exclude-pod-security-in-rule/02-namespace.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: namespace
spec:
  timeouts: {}
  try:
  - apply:
      file: ns.yaml
  - assert:
      file: ns.yaml
